language/move-lang/tests/move_check/locals/unused_copyable.move
module M {
    struct S {}

    // this does not currently produce a warning
    fun unused(i: u64, s: S) {
    }
}
